--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Business Development </h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I make high-quality Business Development of any category at a professional level.
                 </p>
               </div>
 
@@ -351,11 +351,9 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Saurabh was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                     Saurabh was the perfect choice for crafting our corporate identity, exceeding our expectations with his exceptional work.
+                    His wealth of experience truly shone through, demonstrating a deep understanding of our business needs. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Saurabh's commitment to client satisfaction was evident in every aspect of his work. His expertise and attention to detail played a pivotal role in the success of our project.
+                    We highly recommend Saurabh for any business development endeavors
                   </p>
                 </div>
 
@@ -373,12 +371,8 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Saurabh was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                  </p>
+                   Saurabh was brought on board to spearhead the creation of our corporate identity, and we couldn't be more satisfied with the results. His extensive experience and genuine concern for the client's needs set her apart. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Saurabh's dedication to understanding and addressing our business requirements was evident throughout the project. 
+                    We wholeheartedly endorse her for any business development initiatives, confident in her ability to deliver exceptional outcomes.
                 </div>
 
               </div>
